[package]
name = "logz"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
incremental = false
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
cty = "0.2.2"
heapless = "0.7.13"
log = "0.4.17"


[build-dependencies]
bindgen = "0.59.2"
