[package]
name = "logz"
description = "Zephyr RTOS logging implementation"
repository = "https://github.com/trueb2/logz"
version = "0.1.2"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["log", "zephyr", "nrf", "bidnings", "ffi"]
categories = ["no-std"]

[lib]
crate-type = ["rlib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
incremental = false
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
cty = "0.2.2"
heapless = "0.7.13"
log = "0.4.17"


[build-dependencies]
bindgen = "0.59.2"
